ec_init_conv_from_client required field validation ongoing

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -19,6 +19,6 @@ $accent: #9c27b0;
 $dark: #1d1d1d;
 
 $positive: #21ba45;
-$negative: #c10015;
+$negative: rgb(220, 39, 51);
 $info: #31ccec;
 $warning: #f2c037;
